--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@codemirror/lang-html": "6.4.3",
     "@codemirror/lang-json": "6.0.1",
+    "@dnd-kit/core": "6.0.8",
+    "@dnd-kit/modifiers": "6.0.1",
+    "@dnd-kit/sortable": "7.0.2",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@material-ui/core": "4.12.4",
