--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "codemirror": "6.0.1",
     "envalid": "7.3.1",
     "fraction.js": "4.2.0",
+    "history": "5.3.0",
     "immer": "9.0.19",
     "js-beautify": "1.14.7",
     "jsonlint-mod": "1.7.6",
@@ -61,6 +62,7 @@
     "recharts": "2.5.0",
     "redux": "4.2.1",
     "simple-react-validator": "1.6.2",
+    "swagger": "0.7.5",
     "uuid": "9.0.0"
   },
   "devDependencies": {
