--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
   "editor.defaultFormatter": "rome.rome",
   "editor.codeActionsOnSave": {
     "source.organizeImports.rome": true
-  }
+  },
+  "cSpell.words": [
+    "Exhibition"
+  ]
 }
