Support for changing text components text alignment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "editor.formatOnSaveMode": "file",
   "editor.defaultFormatter": "rome.rome",
   "editor.codeActionsOnSave": {
-    "source.organizeImports.rome": true
+    "source.organizeImports.rome": "explicit"
   },
   "cSpell.words": [
     "Exhibition"
