--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@uiw/react-codemirror": "4.19.11",
     "ckeditor4-react": "1.1.1",
     "codemirror": "6.0.1",
+    "color-parse": "2.0.2",
     "envalid": "7.3.1",
     "fast-deep-equal": "3.1.3",
     "fraction.js": "4.2.0",
