--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/tinycolor2": "1.4.3",
     "@types/uuid": "9.0.1",
     "@vitejs/plugin-react": "3.1.0",
+    "node-vault": "0.10.2",
     "rome": "12.1.3",
     "typescript": "4.9.3",
     "vite": "4.2.0"
