--- a/.github/workflows/update-staging.yaml
+++ b/.github/workflows/update-staging.yaml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout Main Repository
         uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Resolve docker image name
         id: image_name
         run: |
@@ -66,6 +68,6 @@ jobs:
       - name: Install staging charts
         uses: peter-evans/repository-dispatch@v3
         with:
-          repository: Metatavu/finnlines-crew-portal-charts
+          repository: Metatavu/noheva-charts
           event-type: update-staging
           token: ${{ env.CHARTS_UPDATE_PAT }}
